DEL: deleted unnecessary errors file, OK changed for exit success

--- a/lab_01/makefile
+++ b/lab_01/makefile
@@ -1,13 +1,10 @@
 CFLAGS := -std=c99 -Wall -Werror -pedantic
 
-main.exe : main.o errors.o big_float.o
-	gcc -o main.exe main.o errors.o big_float.o
+main.exe : main.o big_float.o
+	gcc -o main.exe main.o big_float.o
 
-main.o : main.c errors.h big_float.h
+main.o : main.c big_float.h
 	gcc $(CFLAGS) -c main.c
-
-errors.o : errors.c errors.h
-	gcc $(CFLAGS) -c errors.c
 
 big_float.o : big_float.c big_float.h
 	gcc $(CFLAGS) -c big_float.c
